2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-def.c (info_var_cmd): .info var -> .info variables.
	(info_fun_cmd): .info fun -> .info functions.
	* doc/poke.texi (info command): Document .info types.

2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd-info.c (info_types_cmd): Likewise.
	(info_cmds): Add info_types_cmd.
	* poke/pk-cmd-def.c (info_types_cmd): Define.
	(pk_cmd_info_types): New function.
	(print_type_decl): Likewise.
	* etc/poke.rec (Support the command `info types'): Remove as done.

2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.h: New file.
	* poke/pk-table.c: Likewise.
	* poke/*.c: Use pk-table to print tabulated data.
	* testsuite/poke.cmd/*.pk: Update.
	* etc/poke.rec (pk-table): Remove as done.

2020-11-08  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-table.h: New file.
	* poke/pk-table.c: Likewise.
	* poke/Makefile.am (poke_SOURCES): Add pk-table.c and pk-table.h.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pvm.jitter (canary): Use JITTER_STATE_BACKING_FIELD.
	(exit): Likewise.
	(pushob): Likewise.
	(popob): Likewise.
	(pushom): Likewise.
	(popom): Likewise.
	(pushoo): Likewise.
	(popoo): Likewise.
	(pushoi): Likewise.
	(popoi): Likewise.
	(pushod): Likewise.
	(popod): Likewise.
	(pushoac): Likewise.
	(popoac): Likewise.
	(pushopp): Likewise.
	(popopp): Likewise.
	(strace): Likewise.
	(exit): Likewise.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-insn.def: Define PKL_INSN_BEGINHL and
	PKL_INSN_ENDHL.
	* libpoke/pvm.jitter (beghl): New instruction.
	(endhl): Likewise.

2020-12-14  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (poke_term_if): Register color-related handlers in
	the terminal interface.
	* libpoke/pkl-ast.h (PKL_AST_BUILTIN_TERM_GET_COLOR): Define.
	(PKL_AST_BUILTIN_TERM_SET_COLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_GET_BGCOLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_SET_BGCOLOR): Likewise.
	(PKL_AST_BUILTIN_TERM_RGB_TO_COLOR): Likewise.