@@ -1,5 +1,13 @@
 2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-typify.c (pkl_typify1_ps_op_bconc): Improve
+	diagnostics.
+	* testsuite/poke.pkl/bconc-diag-1.pk: New test.
+	* testsuite/poke.pkl/bconc-diag-2.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Update.
+
+2020-12-15  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* poke/pk-cmd-def.c (info_var_cmd): .info var -> .info variables.
 	(info_fun_cmd): .info fun -> .info functions.
 	* doc/poke.texi (info command): Document .info types.
